# fool

./: pyproject.toml
src/fool/: machine.py
